# cmake_make_install_study

./: .gitignore  CMakeLists.txt  README.md
MyProject/: CMakeLists.txt  README.md  package.xml
MyProject/cmake/: myprojectConfig.cmake
MyProject/include/htproject/: htheader.h
MyProject/src/: htheader.cpp  main.cpp
MyProject2/: CMakeLists.txt
MyProject2/src/: main.cpp
cmake/: MyProjectConfig.cmake.in
include/htproject/: htheader.h  htheader.hpp
src/: htheader.cpp  main.cpp
